[package]
name = "mgit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bit-set = "0.5.3"
bytes = "1.6.0"
chrono = "0.4.37"
chrono-tz = "0.9.0"
clap = { version = "4.5.2", features = ["derive"] }
flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
hex = "0.4.3"
log = "0.4.21"
num-bigint = "0.4.4"
reqwest = {version = "0.12.2", features = ["blocking"]}
sha1 = "0.10.6"
simple_logger = "4.3.3"
url = "2.5.0"
